<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:ignoreGravity="@string/_true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" >

    <Button
        android:id="@+id/normalMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:background="@color/button"
        android:onClick="@string/normal"
        android:text="@string/normalText"/>

    <Button
        android:id="@+id/hardMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/normalMode"
        android:layout_below="@+id/normalMode"
        android:layout_marginTop="41dp"
        android:background="@color/button"
        android:onClick="@string/hard"
        android:text="@string/hardText"/>

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hardMode"
        android:layout_below="@+id/hardMode"
        android:layout_marginTop="42dp"
        android:background="@color/button"
        android:onClick="@string/about"
        android:text="@string/aboutText"/>

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aboutBtn"
        android:layout_below="@+id/aboutBtn"
        android:layout_marginTop="41dp"
        android:background="@color/button"
        android:onClick="@string/exit"
        android:text="@string/exitText" />

</RelativeLayout>
