<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".NormalActivity" >

    <TableLayout
        android:id="@+id/Grid"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/background"
        android:keepScreenOn="true" >

        <TableRow
            android:id="@+id/Row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:id="@+id/cell1"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/back"
                android:onClick="cellClick"
                android:clickable="true"/>
            <TextView
                android:id="@+id/cell2"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/back"
                android:onClick="cellClick"
                android:clickable="true"/>
            <TextView
                android:id="@+id/cell3"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/back"
                android:onClick="cellClick"
                android:clickable="true"/>
        </TableRow>
        <TableRow
            android:id="@+id/Row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:id="@+id/cell4"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/back"
                android:onClick="cellClick"
                android:clickable="true"/>
            <TextView
                android:id="@+id/cell5"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/back"
                android:onClick="cellClick"
                android:clickable="true"/>
            <TextView
                android:id="@+id/cell6"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/back"
                android:onClick="cellClick"
                android:clickable="true"/>
        </TableRow>
        <TableRow
            android:id="@+id/Row3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:id="@+id/cell7"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/back"
                android:onClick="cellClick"
                android:clickable="true"/>
            <TextView
                android:id="@+id/cell8"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/back"
                android:onClick="cellClick"
                android:clickable="true"/>
            <TextView
                android:id="@+id/cell9"
                android:layout_height="fill_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/back"
                android:onClick="cellClick"
                android:clickable="true"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/button">
        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/radio_X"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/x"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton android:id="@+id/radio_O"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/o"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
            <TextView
                android:id="@+id/Reset"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/reset"
                android:textSize="20sp"
                android:gravity="center"
                android:onClick="resetClick"
                android:clickable="true"/>
        <Button
            android:id="@+id/backBtn"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/backText"
            android:gravity="center"
            android:clickable="true" />

    </LinearLayout>
</LinearLayout>
